Commit boss
