# backend/swagger.json
@@ -22,13 +22,17 @@
 							"type": "string"
 						},
 						"type": "array"
+					},
+					"type": {
+						"type": "string"
 					}
 				},
 				"required": [
 					"name",
 					"email",
 					"password",
-					"roles"
+					"roles",
+					"type"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -66,6 +70,9 @@
 						},
 						"type": "array"
 					},
+					"type": {
+						"type": "string"
+					},
 					"completedQuestions": {
 						"items": {
 							"properties": {
@@ -84,6 +91,12 @@
 							"type": "object"
 						},
 						"type": "array"
+					},
+					"subscribedCourses": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
@@ -91,7 +104,9 @@
 					"email",
 					"password",
 					"roles",
-					"completedQuestions"
+					"type",
+					"completedQuestions",
+					"subscribedCourses"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -112,6 +127,128 @@
 					"name",
 					"email",
 					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ITeacher": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"roles": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"type": {
+						"type": "string"
+					},
+					"courses": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"name",
+					"email",
+					"password",
+					"roles",
+					"type",
+					"courses"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ICourseQuestion": {
+				"properties": {
+					"description": {
+						"type": "string"
+					},
+					"answers": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"correctAnswer": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"description",
+					"answers",
+					"correctAnswer"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ICourse": {
+				"properties": {
+					"teacher": {
+						"$ref": "#/components/schemas/ITeacher"
+					},
+					"name": {
+						"type": "string"
+					},
+					"chapters": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"content": {
+						"type": "string"
+					},
+					"questions": {
+						"items": {
+							"$ref": "#/components/schemas/ICourseQuestion"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"teacher",
+					"name",
+					"chapters",
+					"content",
+					"questions"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CourseCreateModel": {
+				"properties": {
+					"content": {
+						"type": "string"
+					},
+					"chapters": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"questions": {
+						"items": {
+							"$ref": "#/components/schemas/ICourseQuestion"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"content",
+					"chapters",
+					"questions"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -168,13 +305,7 @@
 				"additionalProperties": false
 			}
 		},
-		"securitySchemes": {
-			"api_key": {
-				"type": "apiKey",
-				"name": "jwt",
-				"in": "header"
-			}
-		}
+		"securitySchemes": {}
 	},
 	"info": {
 		"title": "backend",
@@ -293,6 +424,43 @@
 				}
 			}
 		},
+		"/auth/signupTeacher": {
+			"post": {
+				"operationId": "SignupTeacher",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/IUser"
+										},
+										{}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserCreateModel"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/auth/logout": {
 			"delete": {
 				"operationId": "Logout",
@@ -339,7 +507,124 @@
 				]
 			}
 		},
-		"/questions/get/{questionId}": {
+		"/courses/subscribedCourses": {
+			"get": {
+				"operationId": "GetSubscribedCourses",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ICourse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/courses/find": {
+			"get": {
+				"operationId": "Find",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ICourse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "chapters",
+						"required": true,
+						"schema": {
+							"type": "array",
+							"items": {
+								"type": "string"
+							}
+						}
+					}
+				]
+			}
+		},
+		"/courses/create": {
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ICourse"
+										},
+										{}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CourseCreateModel"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/questions/{questionId}": {
 			"get": {
 				"operationId": "GetQuestion",
 				"responses": {
